fix fullscreen focus related jiggling & visible round corners (#87)
* Update window.css

prevents fullscreen jiggling of 1px border when toggling focus & fixes fullscreen visible round corners when focus is lost.

* Update window.css

--- a/web/share/css/window.css
+++ b/web/share/css/window.css
@@ -53,6 +53,8 @@ div.window-resizable.window-active::-webkit-resizer {
 	height: 20px !important;
 }
 div.window:fullscreen {
+	border: 0px;
+	border-radius: 0px;
 	resize: none !important;
 	position: absolute !important;
 	top: 0px !important;
